--- a/README
+++ b/README
@@ -4,5 +4,9 @@ Required Node Modules:
 - libxmljs
 - nconf
 - nodeunit for tests
+- dateformatjs
 
+Installation
+
+Run "npm install" to install the required modules.
 Rename config.json.sample to config.json and enter your <keyID> and <vCode>.
